--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -22,8 +22,15 @@ jobs:
       - name: Install dependencies
         run: bundle install
 
-      - name: Run tests
-        run: bin/rspec
+      - name: Install pre-commit
+        run: |
+          apt-get update
+          apt-get install --yes --no-install-recommends python3 python3-pip
+          pip install pre-commit --break-system-packages
+          pre-commit install --install-hooks
 
       - name: Run linters
         run: pre-commit run --all-files
+
+      - name: Run tests
+        run: bin/rspec
