--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -24,8 +24,8 @@ jobs:
 
       - name: Install pre-commit
         run: |
-          apt-get update
-          apt-get install --yes --no-install-recommends python3 python3-pip
+          sudo apt-get update
+          sudo apt-get install --yes --no-install-recommends python3 python3-pip
           pip install pre-commit --break-system-packages
           pre-commit install --install-hooks
 
