--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -26,7 +26,7 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install --yes --no-install-recommends python3 python3-pip
-          pip install pre-commit --break-system-packages
+          pip install pre-commit
           pre-commit install --install-hooks
 
       - name: Run linters
