--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,4 +1,6 @@
 ---
+require:
+  - rubocop-rspec
 
 AllCops:
   NewCops: enable
@@ -22,4 +24,19 @@ Metrics/BlockLength:
   Enabled: false
 
 Layout/LineLength:
+  Enabled: false
+
+RSpec/ExampleLength:
+  Enabled: false
+
+RSpec/LetSetup:
+  Enabled: false
+
+RSpec/IndexedLet:
+  Enabled: false
+
+RSpec/NestedGroups:
+  Enabled: false
+
+RSpec/MultipleExpectations:
   Enabled: false
