--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,24 +13,14 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up Ruby
+      - name: Set up Ruby and Bundler
         uses: ruby/setup-ruby@v1.196.0
         with:
           ruby-version: 3.3.4
           bundler-cache: true
 
-      - name: Install dependencies
-        run: bundle install
-
-      - name: Install pre-commit
-        run: |
-          sudo apt-get update
-          sudo apt-get install --yes --no-install-recommends python3 python3-pip
-          pip install pre-commit
-          pre-commit install --install-hooks
-
-      - name: Run linters
-        run: pre-commit run --all-files
+      - name: Setup pre-commit and run linters
+        uses: pre-commit/action@v3.0.1
 
       - name: Run tests
         run: bin/rspec
